# NexusMind

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  POETRY_USAGE.md  README.md  install_nexusmind.py  nexusmind_cli.py  nexusmind_simple_chat.py  pyproject.toml  quick_start.py  requirements.txt  run_server.py  test_client.html  test_system.py
.cursor/rules/: backend.mdc
backend/: __init__.py
backend/api/: main.py
backend/core/: agent_manager.py  audio_agent.py  camera_agent.py  config.py  context_manager.py  multimodal_processor.py  orchestrator.py  tools.py
backend/core/agents/: __init__.py  base_agent.py  vision_agent.py  voice_agent.py
backend/models/: schemas.py
backend/utils/: a2a_client.py  retry_utils.py  validation.py
docs/: architect.md  multimodal-guide.md  multimodal-setup-guide.md
infrastructure/: docker-compose.yml
tests/: __init__.py  conftest.py  test_a2a_client.py  test_agents.py  test_api.py  test_context_manager.py  test_multimodal.py  test_orchestrator.py  test_retry_utils.py  test_validation.py
venv_old/: pyvenv.cfg
