[tool.poetry]
name = "nexusmind"
version = "1.0.0"
description = "Federated multi-agent collaboration platform for real-time voice and visual interactions"
authors = ["NexusMind Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"  # 支持 Python 3.9-3.12
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
redis = "^5.0.0"
aio-pika = "^9.3.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
structlog = "^23.2.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pillow = "^10.1.0"
opencv-python = "^4.8.0"

# LangChain 相关 - 使用更灵活的版本
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.2"
langgraph = "^0.0.20"

# 多模态处理
openai-whisper = {version = "^20231117", optional = true}
pytesseract = {version = "^0.3.10", optional = true}  
SpeechRecognition = {version = "^3.10.0", optional = true}
pydub = "^0.25.1"

# PyTorch - 让用户选择安装方式
torch = {version = "^2.0.0", optional = true}
torchvision = {version = "^0.15.0", optional = true}

# OpenAI API
openai = "^1.61.0"

# 客户端工具 (可选)
rich = {version = "^13.7.0", optional = true}
# 音频处理
pyaudio = {version = "^0.2.11", optional = true}
socksio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.extras]
# 基础功能
core = ["rich"]
client = ["rich", "pyaudio"]

# 专项功能  
ocr = ["pytesseract"]
speech = ["SpeechRecognition", "pyaudio"]
pytorch = ["torch", "torchvision"]

# AI功能 (需要PyTorch)
whisper = ["openai-whisper", "torch", "torchvision"]

# 组合安装
basic = ["rich", "pytesseract", "SpeechRecognition", "pyaudio"]
ai-full = ["rich", "pytesseract", "SpeechRecognition", "pyaudio", "torch", "torchvision", "openai-whisper"]
all = ["rich", "pytesseract", "SpeechRecognition", "pyaudio", "torch", "torchvision", "openai-whisper"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false